annoying jumping up of iplayer now stopped

--- a/src/App.scss
+++ b/src/App.scss
@@ -180,6 +180,7 @@ button:visited {
 }
 
 .iframe-style {
+  float: left;
 }
 .alignLeft {
   text-align: left;
